Dockerisierung + Swagger